Table users {
  id uuid [primary key]
  email text [not null]
  password_hash text [not null]
  first_name text
  last_name text
  profile_picture_url text
  role text [not null, default: 'user', note: 'CHECK: user | moderator | admin']
  status text [not null, default: 'active', note: 'CHECK: active | suspended | banned']
  email_verified_at timestamp [null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]
  last_login_at timestamp [null]

  indexes {
    (email) [unique, note: 'WHERE deleted_at IS NULL']
  }
}

Table brands {
  id uuid [primary key]
  name text [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]
}

Table snack_items {
  id uuid [primary key]
  brand_id uuid [ref: > brands.id]
  name text [not null]
  description text
  price decimal(10,2)
  barcode text
  avg_rating decimal(3,2) [not null, default: 0]
  review_count int [not null, default: 0]
  bookmark_count int [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]

  indexes {
    (barcode) [unique, note: 'WHERE barcode IS NOT NULL AND deleted_at IS NULL']
  }
}

Table categories {
  id uuid [primary key]
  name text [not null, unique]
  slug text [not null, unique, note: 'lowercase, hyphenated e.g. chips']
}

Table snack_item_categories {
  snack_item_id uuid [not null, ref: > snack_items.id]
  category_id uuid [not null, ref: > categories.id]

  indexes {
    (snack_item_id, category_id) [pk]
  }
}

Table snack_reviews {
  id uuid [primary key]
  snack_item_id uuid [not null, ref: > snack_items.id]
  user_id uuid [not null, ref: > users.id]
  rating int [not null, note: 'CHECK (rating >= 1 AND rating <= 5)']
  comment text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]

  indexes {
    (snack_item_id, user_id) [unique, note: 'WHERE deleted_at IS NULL']
    (snack_item_id)
    (user_id)
  }
}

Table comments {
  id uuid [primary key]
  review_id uuid [not null, ref: > snack_reviews.id]
  user_id uuid [not null, ref: > users.id]
  parent_comment_id uuid [null, ref: > comments.id]
  body text [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]

  indexes {
    (review_id)
    (parent_comment_id)
  }
}

// --- Images (split by entity) ---

Table snack_item_images {
  id uuid [primary key]
  snack_item_id uuid [not null, ref: > snack_items.id]
  url text [not null]
  sort_order int [not null, default: 0]
  is_primary boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]

  indexes {
    (snack_item_id) [note: 'WHERE deleted_at IS NULL']
  }
}

Table snack_review_images {
  id uuid [primary key]
  review_id uuid [not null, ref: > snack_reviews.id]
  url text [not null]
  sort_order int [not null, default: 0]
  is_primary boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [null, default: null]

  indexes {
    (review_id) [note: 'WHERE deleted_at IS NULL']
  }
}

// --- Reactions (split by entity) ---

Table review_reactions {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  review_id uuid [not null, ref: > snack_reviews.id]
  type text [not null, note: 'CHECK: like | fire | meh']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, review_id) [unique]
    (review_id)
  }
}

Table comment_reactions {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  comment_id uuid [not null, ref: > comments.id]
  type text [not null, note: 'CHECK: like | fire | meh']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, comment_id) [unique]
    (comment_id)
  }
}

// --- Reports (split by entity) ---

Table review_reports {
  id uuid [primary key]
  reporter_id uuid [not null, ref: > users.id]
  review_id uuid [not null, ref: > snack_reviews.id]
  reason text [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (reporter_id, review_id) [unique]
  }
}

Table comment_reports {
  id uuid [primary key]
  reporter_id uuid [not null, ref: > users.id]
  comment_id uuid [not null, ref: > comments.id]
  reason text [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (reporter_id, comment_id) [unique]
  }
}

// --- Bookmarks ---

Table bookmarks {
  user_id uuid [not null, ref: > users.id]
  snack_item_id uuid [not null, ref: > snack_items.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, snack_item_id) [pk]
  }
}

// --- Sessions ---

Table sessions {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  user_agent text
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [not null]
  revoked_at timestamp [null, default: null]
}

// --- Password Resets ---

Table password_resets {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [  not null]
  used_at timestamp [null, default: null]
}

// --- Email Verifications ---

Table email_verifications {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [not null]
  used_at timestamp [null, default: null]
}